--- a/package.json
+++ b/package.json
@@ -10,12 +10,31 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "expo": "~44.0.0",
+    "@expo-google-fonts/inter": "^0.2.2",
+    "@expo-google-fonts/poppins": "^0.2.2",
+    "@expo-google-fonts/rubik": "^0.2.2",
+    "@expo/vector-icons": "^12.0.5",
+    "@react-native-masked-view/masked-view": "0.2.6",
+    "@react-navigation/bottom-tabs": "^6.0.9",
+    "@react-navigation/native": "^6.0.6",
+    "@react-navigation/native-stack": "^6.2.5",
+    "@react-navigation/stack": "^6.0.11",
+    "@use-expo/font": "^2.0.0",
+    "expo": "^44.0.5",
+    "expo-app-loading": "~1.3.0",
+    "expo-font": "^10.0.4",
+    "expo-secure-store": "^11.1.0",
     "expo-status-bar": "~1.2.0",
+    "firebase": "^9.6.3",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
-    "react-native-web": "0.17.1"
+    "react-native-gesture-handler": "^2.2.0",
+    "react-native-safe-area-context": "^3.3.2",
+    "react-native-screens": "^3.10.2",
+    "react-native-vector-icons": "^9.0.0",
+    "react-native-web": "0.17.1",
+    "react-redux": "^7.2.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
